--- a/style.css
+++ b/style.css
@@ -1,86 +1,33 @@
-*{
-    margin: 3;
-    padding:4;
-    font-family:sans-serif;
-    background-color: #f9fafb;
-    
-    
-    
-
-}
-
-.hero{
-    position:relative ;
-    width:100%;
-    height:100vh;
-}
-
-nav{
+.social-media {
     display: flex;
-    width:84%;
-    margin:auto;
-    padding: 20px 0;
-    align-items: center;
-    justify-content:space-between ;
-    transition: .3s;
+    flex-direction: column;
 }
 
-nav ul li{
-    display:inline-block;
-    list-style-type: none;
-    margin: 10px 20px;
-}
-
-nav ul li a{
-    text-decoration: none;
-    color:#7f9a14
-    font-weight: bold;
-}
-
-nav ul li a:hover{
-    color: rgb(0, 255, 89);
-}
-
-.detel{
-    margin-left: 3%;
-    margin-top: 4%;
-}
-.detel h1{
-    font-size: 60px;
-    color: #212121;
-    margin-bottom: 20px;
-}
-span{
-    color: hsl(0, 100%, 50%);
-}
-
-.detel p{
-    color: #555;
-    line-height: 22px;
-}
-.detel a{
-    background: #212121;
-    padding:10px 18px;
-    text-decoration: none;
-    font-weight: bold;
-    color: #a2a225;;
-    display: inline-block;
-    margin:70px 0 ;
-
-    border-radius:22px;
+#displayInput {
+    width: 40vw;
     
+    height: 40px;
+    padding-bottom: 2px;
+    padding: 2px;
+    border-radius: 12px;
+}
+
+button {
+    width: 20vw;
+    gap: 12vw;
+    height: 30px;
+    border-radius: 12px;
+    padding-left: 22px;
 
 }
-.images{
-    width:80%;
-    height:120;
-    position:absolute ;
-    bottom: 100;
-    bottom: auto;
-    right :100px;
-    object-position: 50% 50%; /* default position */
-object-position: right bottom;
-object-position: 20px 95px;
-object-position: center 20px; /* mix and match */
-object-position: 60% top
-     }
+
+.container {
+    width: 87%;
+    height: 100%;
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 6vw;
+    background-color: beige;
+    
+    
+}
